# label-noise-and-generalization

./: .gitignore  .pre-commit-config.yaml  README.md  cifar10.py  pyproject.toml  train.py
src/: config.py  optimizers.py  tasks.py  training.py  tuning.py  utils.py
src/data/: __init__.py  cifar10.py  fmnist.py  imdb.py  yahoo.py
src/models/: __init__.py  base.py  resnet.py  transformer.py  vgg.py
src/tasks/: __init__.py  cifar10.py
