[tool.poetry]
name = "adagen"
version = "0.1.0"
description = ""
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
