[tool.poetry]
name = "label-noise-and-generalization"
version = "0.1.0"
description = ""
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
torch = "^1.9.1"
torchvision = "^0.10.1"
pytorch-lightning = "^1.4.9"
typing-extensions = "^3.10.0"
PyHessian = "^0.1"
hyperopt = "^0.2.5"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
